# pancake-forecast

./: README.md
backend/: Makefile  models.py  pyproject.toml  requirements.txt  test.py  vercel.json
backend/app/: main.py
frontend/pancake/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/pancake/components/: date-sidebar.tsx  pancake-display.tsx
frontend/pancake/lib/: api.tsx
frontend/pancake/src/app/: layout.tsx  page.tsx
frontend/pancake/src/app/api/cron/: route.ts
frontend/pancake/src/app/api/pancake-data/: route.js
frontend/pancake/src/app/api/pancake-data-first/: route.js
frontend/pancake/src/app/api/pancake-data-second/: route.js
frontend/pancake/src/app/pancake-data-second/: route.js
