[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Phoenix Sheppard <phoenixsheppard28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
httpx = "^0.28.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
